--- a/frontend/components/navbar/navbar.module.scss
+++ b/frontend/components/navbar/navbar.module.scss
@@ -5,3 +5,16 @@
   display: flex;
   height: 64px;
 }
+
+.spacer {
+  flex-grow: 2;
+  -webkit-box-flex: 1;
+  width: 100%;
+}
+
+.loginContainer {
+  display: flex;
+  justify-content: flex-end;
+  visibility: visible;
+  width: 100%;
+}
